[tool.poetry]
name = "greyhorse-sqla"
version = "0.1"
description = "Greyhorse SqlAlchemy library"
license = "MIT"
repository = "https://gitlab.com/max-plutonium/greyhorse"
authors = ["Max Plutonium <plutonium.max@gmail.com>"]
maintainers = ["Max Plutonium <plutonium.max@gmail.com>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "greyhorse_sqla" },
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.10"
greyhorse_core = { path = "../core/", develop = true }
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0"}
sqlalchemy-utils = "^0.41"

aiosqlite = {version = "^0.18", optional = true}
asyncpg = {version = "^0.27", optional = true}
psycopg2 = {version = "^2.9", optional = true}
aiomysql = {version = "^0.1", optional = true}
pymysql = {version = "^1.0", extras = ["rsa"], optional = true}

[tool.poetry.extras]
sqlite = ["aiosqlite"]
pg = ["asyncpg", "psycopg2"]
mysql = ["aiomysql", "pymysql"]

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
pytest-faker = "^2.0"
autoflake = "^2.0"
black = "^23.1"
flake8 = "^6.0"
isort = "^5.12"
mypy = "^1.1"
pre-commit = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-monorepo-dependency-plugin]
enable = true
