[tool.poetry]
name = "greyhorse-redis"
version = "0.1.1"
description = "Greyhorse Redis library"
license = "MIT"
repository = "https://gitlab.com/max-plutonium/greyhorse"
authors = ["Max Plutonium <plutonium.max@gmail.com>"]
maintainers = ["Max Plutonium <plutonium.max@gmail.com>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

packages = [
    { include = "greyhorse_redis" },
]

[tool.poetry.dependencies]
python = "^3.12"
greyhorse = [
    { path = "../../core/", develop = true },
    { version = "^0.4.2" }
]
pydantic = {version = "^2.0", extras = ["dotenv"]}
pydantic-settings = "^2.2.1"

redis = {extras = ["hiredis"], version = "^5.0.3"}

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
pytest-faker = "^2.0"
autoflake = "^2.2"
black = "^23.11"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.7"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-monorepo-dependency-plugin]
enable = true
