[project]
name = "greyhorse-sqla"
dynamic = ["version"]
description = "Greyhorse SqlAlchemy library"
requires-python = ">=3.12"

dependencies = [
    "greyhorse>=0.0.0",
    "pydantic-settings>=2.5.2",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy[asyncio,mypy]>=2.0.35",
]

[project.optional-dependencies]
pg = [
    "asyncpg>=0.29.0",
    "psycopg2>=2.9.9",
]
sqlite = [
    "aiosqlite>=0.20.0",
]
mysql = [
    "aiomysql>=0.2.0",
    "pymysql[rsa]>=1.1.1",
]

[tool.uv.sources]
greyhorse = { path = "../../core", editable = true }

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-faker>=2.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
    "uv-dynamic-versioning>=0.1.0",
]
