[project]
name = "greyhorse-sqla"
dynamic = ["version"]
description = "Greyhorse SqlAlchemy library"
keywords = ["sqlalchemy"]
license = {text = "MIT License"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"

maintainers = [
    {name = "Max Plutonium", email = "plutonium.max@gmail.com"},
]
authors = [
    {name = "Max Plutonium", email = "plutonium.max@gmail.com"},
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "greyhorse~=0.4.25",
    "pydantic-settings~=2.5.2",
    "sqlalchemy-utils~=0.41.2",
    "sqlalchemy[asyncio,mypy]~=2.0.35",
]

[project.optional-dependencies]
pg = [
    "alembic-postgresql-enum~=1.4.0",
    "asyncpg~=0.30.0",
    "psycopg2~=2.9.10",
]
sqlite = [
    "aiosqlite~=0.20.0",
]
mysql = [
    "aiomysql~=0.2.0",
    "pymysql[rsa]~=1.1.1",
]
migration = [
    "alembic~=1.14.0",
    "typer~=0.13.1",
]

[project.scripts]
migration = 'greyhorse_sqla.migration.cmd:app'

[project.urls]
Homepage = "https://gitlab.com/max-plutonium/greyhorse"
Repository = "https://gitlab.com/max-plutonium/greyhorse"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-faker>=2.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "ruff>=0.6.7",
    "uv-dynamic-versioning>=0.1.0",
]

[tool.uv.sources]
greyhorse = { path = "../../core", editable = true }

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true
vcs = "git"
pattern = "default-unprefixed"
style = "pep440"
bump = true
strict = false
latest-tag = true
